--- a/src/containers/BookMentors/styles.scss
+++ b/src/containers/BookMentors/styles.scss
@@ -1,360 +1,268 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
 .mentors-books-page {
-    height: 100vh;
+  height: 100vh;
 
-    .mentor-top-section{
-        background: #fff;
+  .header-top-section {
+    background-image: url('../../assets/images/Background-books.png');
+    background-repeat: no-repeat;
+
+    .header-background {
+      max-width: 1128px;
+      display: block;
+      margin: auto;
     }
 
-    .header-style-mentor {
-        max-width: 1128px;
-        display: block;
-        margin: auto;
-    
-        @include mobile {
-          padding: 0px 12px 0px 12px;
-        }    
-}
-    .mentor-header-body{
-        margin-top: -15px;
-        margin-left: -5px;
-            @include mobile{
-                margin-left: 0px;
-            }
-    
-    .mentor-body{
-        display: flex;
-        @include mobile{
-            display: block;
-        }
+    .banner-image-container {
+      display: flex;
+      justify-content: flex-end;
+    }
 
-    .left-body-header {
-            max-width: 1128px;
-            display: block;
-            margin: auto;
-        
-            @include mobile {
-              padding: 0px 12px 0px 12px;
-            } 
-       
-    .top-header-mentor{
-        width: 100%;
-        height: 338px;
-        @include mobile{
-            width: 100%;
-            padding: 2px;
-            margin-bottom: 20px;
-        }
+    .banner-image {
+      margin-top: 40px;
+      margin-right: -62px;
+      height: 550px;
     }
-    .header-container{
-        display: flex;
-        margin-bottom: 50px;
-    }
-    .breadcrumbs {
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 100%;
-        color: $theme-secondary;
-        margin-right: 4px;
-      }
-      .breadcrumbs-body {
-        display: flex;
-      }
-    .top-header-text{
-        font-family: 'Poppins', sans-serif;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 46px;
-        line-height: 130%;
-        color: #1E2432;
-        margin-top: 60px;
-        @include mobile{
-            margin-top: 50px;
-            font-size: 30px;
-            font-size: 26px;
-            line-height: 36px;
-            text-align: left;
-            margin-left: -180px; //wrong
-        }
-        .mentor-detail{
-            display: flex;
-            .log-tag{
-                width: 12px;
-                height: 12px;
-            }
-            .logo-desc{
-                font-family: 'Nunito',sans-serif;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 14px;
-                line-height: 100%;
-                text-transform: capitalize;
-                color: #687086;
-                margin-top: 13px;
-                margin-left: 12px;
-            }
-    }
-    }
-    
-    .header-desc{                
-        font-family: 'Nunito',sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 100%;
-        color: #687086;
-        @include mobile{
-            font-size: 16px;
-        }
-    }
-    .mentor-desc{
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 30px;
-        color: #687086;
-        width: 574px;
-        @include mobile{
-            font-size: 16px;
-            width: 98%;
-        }
-    }
-    .social-media{
-        display: flex;
-        margin-left: -20px ; //wrong
-    .logo-container{        
-        background: #FFFFFF;
-        box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.3);
-        border-radius: 29px;
-    }
-    .logos{
-        width: 120px;
-        height: 120px;
-        margin-left: -30px; //wrong
-    }}
-    }
-    .button-recommendations{
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 12px;
-        line-height: 100%;
-        color: #2D66FE;
-        flex: none;
-        order: 0;
-        flex-grow: 0;
-        margin: 10px 0px;
-        background: transparent;
-        border: 0.1px solid #2D66FE;
-        padding: 7px;
-        &:hover{
-            background: #2D66FE;
-            color: #fff;
-        }
-    }
-    .image-books{
-        background: url('../../assets/images/BG.svg');
-        background-repeat: no-repeat;
-        margin-top: 40px;
-        width: 540px;
-        height: 481px;
-        @include mobile{
-            margin-top: 20px;
-            width: 98%;
-            height: 110px;
-            background: #fff;
-        }
-    }
-    .book-shelf-image{
-        width: 298px;
-        height: 298px;
-        margin-top: 93px;
-        border-radius: 100%;
-        margin-left: 100px;
-
-        @include mobile{
-            margin-left: 12px;
-            width: 120px;
-            height: 120px;
-            margin-top: 10px;
-        }
-    }
-    .tag-body{
-        align-self: center;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        margin-top: -15px;
-        margin-left: -37px;
-        @include mobile{
-            margin-top: -20px;
-            align-self: flex-start;
-            align-items: flex-start;
-            justify-content: flex-start;
-            display: flex;
-            margin-left: 30px;
-        }
-    }
-    .mentor-tag{
-        text-align: center;
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 100%;
-        color: #FFFFFF;
-        background: #0099FF;
-        border-radius: 4px;
-        width: 173px;
-        height: 40px;
-        align-self: center;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        @include mobile{
-            width: 83px;
-            height: 40px;
-            font-size: 14px;            
-        }
-    }
-   }
-
-}
-    .books-by-mentor{
-        padding: 110px 0px 20px 0px;
-        @include mobile{
-            padding: 20px 0px 20px 0px;
-        }
-        .book-list{
-        max-width: 1128px;
-        display: block;
-        margin: auto;
-        }
-        .book-suggestion{
-            font-family:'Poppins', sans-serif;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 36px;
-            line-height: 54px;
-            color: #1E2432;
-            @include mobile{
-                font-size: 20px;
-                margin-left: 12px;
-                line-height: 27px;
-            }
-            }
-
-    .text-recommended{
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 36px;
-        line-height: 54px;
-        color: #1E2432;
-
-        @include mobile{
-            font-size: 18px;
-            line-height: 27px;
-            margin-left: 12px;
-        }
-    }
-    
-    
-
   }
-  .crousal-title{
+
+  .header-style {
+    @include mobile {
+      padding: 0px 12px 0px 12px;
+    }
+  }
+
+  .text-recommended {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 54px;
+    color: #1e2432;
+    padding-top: 150px;
+
+    @include mobile {
+      font-size: 18px;
+      line-height: 27px;
+      margin-left: 12px;
+      margin-bottom: 20px;
+    }
+  }
+
+  .button-recommendations {
+    font-family: 'Nunito', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 100%;
+    color: #2d66fe;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 10px 0px;
+    background: transparent;
+    border: 0.1px solid #2d66fe;
+    padding: 7px;
+    &:hover {
+      background: #2d66fe;
+      color: #fff;
+    }
+  }
+
+  .header-complete-body {
+    .left-body-header {
+      padding-left: 25px !important;
+      .top-header-text {
+        margin-top: 50;
+
+        @include mobile {
+          margin-top: 70px;
+        }
+      }
+    }
+  }
+
+  .image-books {
+    margin-top: 40px;
+    position: relative;
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include mobile {
+      margin-top: 0px;
+      width: 100%;
+      height: fit-content;
+      background: #fff;
+    }
+  }
+  .book-shelf-image {
+    width: 100%;
+    height: auto;
+
+    @include mobile {
+      margin-left: 12px;
+      width: 200px;
+      height: 200px;
+      margin-top: 0px;
+    }
+  }
+  .mentor-image-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+  }
+  .tag-body {
+    margin-top: -15px;
+    width: 100%;
+    z-index: 999;
+    margin-right: -80px;
+    display: flex;
+    justify-content: center;
+
+    @include mobile {
+      margin-top: -20px;
+      align-self: end;
+      justify-content: center;
+      align-items: revert;
+      display: flex;
+      margin-left: 0px;
+    }
+  }
+  .mentor-tag {
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 100%;
+    color: #ffffff;
+    background: #0099ff;
+    border-radius: 4px;
+    width: 173px;
+    height: 40px;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    @include mobile {
+      width: 83px;
+      height: 40px;
+      font-size: 14px;
+    }
+  }
+
+  .book-list {
+    max-width: 1128px;
+    display: block;
+    margin: auto;
+  }
+  .book-suggestion {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
     line-height: 54px;
-    color: #1E2432;
-    margin-top: 110px;
+    color: #1e2432;
+    @include mobile {
+      font-size: 20px;
+      margin-left: 12px;
+      line-height: 27px;
+    }
   }
-  .images-list-expert{
+  .images-list-expert {
     display: flex;
-    width:350px;
+    justify-content: flex-end;
+    width: 350px;
     height: 466px;
 
-    .text-appear{
-        display: none;                                
-        font-family: 'Nunito',sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 120%;
-        color: #FFFFFF;
-        flex: none;
-        order: 1;
-        flex-grow: 0;
-        width: 310px;
-        text-align: left;
-        margin-left: 12px;
-        margin-bottom: 10px;
+    @include mobile {
+      justify-content: center;
     }
-  .images{
-    background-size: cover;
-    width:350px;
-    height: 466px;
-    border-radius: 12px;
-    margin-right: 5px;
-    margin-bottom: 37px;
-    @include mobile{
+
+    .text-appear {
+      display: none;
+      font-family: 'Nunito', sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 120%;
+      color: #ffffff;
+      flex: none;
+      order: 1;
+      flex-grow: 0;
+
+      text-align: left;
+      margin-left: 12px;
+      margin-bottom: 10px;
+    }
+    .images {
+      background-size: cover;
+      width: 350px;
+      height: 466px;
+      border-radius: 12px;
+      margin-right: 5px;
+      margin-bottom: 37px;
+      display: flex;
+      justify-content: flex-end;
+      flex-direction: column;
+      @include mobile {
         width: 300px;
         height: 400px;
-    }
+      }
 
-    &:hover{
+      &:hover {
         box-shadow: 0px 10px 40px -5px rgba(48, 49, 53, 0.12);
-        .text-appear{
-            display: block;
+        .text-appear {
+          display: block;
         }
-        .expert-name{
-            margin-top: 310px;
-            @include mobile{
-                margin-top: 280px;
-            }
+        .expert-name {
+          margin-top: 310px;
+          @include mobile {
+            margin-top: 280px;
+          }
         }
+      }
     }
-}
-.expert-name{
-    text-align: left;
-    margin-left: 12px;
-    margin-top: 400px;//wrong
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 100%;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    @include mobile{
-        margin-top: 320px;
+    .expert-name {
+      text-align: left;
+      margin-left: 12px;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 100%;
+      flex: none;
+      order: 0;
+      flex-grow: 0;
     }
-}
-.content-desc{
-    font-family: 'Nunito', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 90%;
-    color: #FFFFFF;
-    flex: none;
-    order: 1;
-    text-align: left;
-    margin-left: 12px;
-    margin-top: -3px;
-}        
+    .content-desc {
+      font-family: 'Nunito', sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 120%;
+      color: #ffffff;
+      flex: none;
+      order: 1;
+      text-align: left;
+      margin-left: 12px;
+      margin-top: -3px;
+    }
+  }
 
-}
-  
-    
+  .owl-carousel {
+    margin-top: 36px;
+  }
+
+  .owl-theme .owl-nav {
+    top: -101px;
+  }
 }
