--- a/src/containers/LearnMoreBooks/styles.scss
+++ b/src/containers/LearnMoreBooks/styles.scss
@@ -1,200 +1,147 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
 .books-page {
-    height: 100vh;
+  height: 100vh;
 
-    .books-top-section{
-        background: #fff;
+  .header-top-section {
+    background-image: url('../../assets/images/Background-books.png');
+    background-repeat: no-repeat;
+
+    .header-background {
+      max-width: 1128px;
+      display: block;
+      margin: auto;
     }
 
-    .header-style-books {
+    .banner-image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+
+    .banner-image {
+      height: 417.97px;
+      stroke: 12px;
+      border: 12.73px solid #ffffff;
+      border-radius: 12.73px;
+    }
+  }
+
+  .text-recommended {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 54px;
+    color: #1e2432;
+    padding-top: 110px;
+    padding-bottom: 38px;
+
+    @include mobile {
+      font-size: 18px;
+      line-height: 27px;
+      margin-left: 12px;
+      margin-bottom: 20px;
+    }
+  }
+
+  .header-complete-body {
+    .left-body-header {
+      padding-left: 25px !important;
+      .top-header-text {
+        margin-top: 80px;
+
+        @include mobile {
+          margin-top: 70px;
+        }
+      }
+    }
+  }
+
+  .book-page-body {
+    margin-top: -15px;
+    margin-left: -25px;
+    @include mobile {
+      margin-left: 0px;
+    }
+
+    .books-container-body {
+      display: flex;
+      @include mobile {
+        display: block;
+      }
+      .left-header-body {
         max-width: 1128px;
         display: block;
         margin: auto;
-    
+
         @include mobile {
           padding: 0px 12px 0px 12px;
         }
+        .top-header-books {
+          width: 100%;
+          height: 338px;
 
-}
-
-  .book-page-body{
-    margin-top: -15px;
-    margin-left: -25px;
-    @include mobile{
-        margin-left: 0px;
-    }
-          
-    .books-container-body{
-        display: flex;
-        @include mobile{
-            display: block;
-        }
-    .left-header-body{
-            max-width: 1128px;
-            display: block;
-            margin: auto;
-        
-            @include mobile {
-              padding: 0px 12px 0px 12px;
-            } 
-    .top-header-books{
-        width: 100%;
-        height: 338px;
-        @include mobile{
+          @include mobile {
             width: 100%;
             padding: 2px;
             margin-bottom: 20px;
+          }
         }
-    }
-    .top-header-text{
-        font-family: 'Poppins', sans-serif;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 46px;
-        line-height: 130%;
-        color: #1E2432;
-        margin-top: 60px;
-        width: 500px;
-        @include mobile{
-            margin-top: 50px;
-            font-size: 30px ;
-        }
-    }
-    .breadcrumbs {
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 100%;
-        color: $theme-secondary;
-        margin-right: 4px;
-      }
-      .breadcrumbs-body {
-        display: flex;
-      }
-    .header-desc{                
-        font-family: 'Nunito',sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 100%;
-        color: #687086;
-        margin-top: -10px;
-        @include mobile{
-            width: 100%;
-            font-size:16px;
-        }
-    }
-    .rating-desc{
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 27px;
-        color: #687086;
+        .top-header-text {
+          font-family: 'Poppins', sans-serif;
+          font-style: normal;
+          font-weight: 800;
+          font-size: 46px;
+          line-height: 130%;
+          color: #1e2432;
+          margin-top: 60px;
+          width: 500px;
 
-    }.ratings{
-        display: flex;
-        
-    }
-    .stars-reviews{
-        margin-top: -8px;
-        margin-right: 7px;
-        margin-left: 12px;
-    }
-    .mentor-desc{
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 30px;
-        color: #687086;
-        width: 574px;
-        @include mobile{
-            width:100%;
-            font-size: 16px;
+          @include mobile {
+            margin-top: 50px;
+            font-size: 30px;
+          }
         }
-    }
-    .buy-now{        
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        width: 83px;
-        height: 32px;
-        background: #2D66FE;
-        color: #fff;
-        box-sizing: border-box;
-        border-radius: 4px;
-        padding-left: 14px;
-        padding-top: 5px;
-        margin-left: 0px;            
-        @include mobile{
-            margin-top: 20px;
-        }
-    }
-    .recommend-container{
-        display: flex;
-    .recommended-by{
-        margin-top: 20px;
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 27px;
-        color: #687086;
-    }
-    .mentor-icon{
-        width: 24px;
-        height: 24px;
-        border-radius: 100%;
-        margin-left: 12px;
-        margin-top: 22px;
-    }
-}
-    .recommendation{
-        margin-top: 12px;
-        display: flex;
-        justify-content: space-evenly;
-    }
-}
-       
-    .mentor-image{
-        width: 20px;
-        height: 20px; 
-       }
-    
-    .image-books{
-        background: url('../../assets/images/BG.svg');
-        background-repeat: no-repeat;
-        margin-top: 40px;
-        width: 540px;
-        height: 481px;
-        @include mobile{
-            margin-top: 180px;
+        .header-desc {
+          font-family: 'Nunito', sans-serif;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 18px;
+          line-height: 100%;
+          color: #687086;
+          margin-top: -10px;
+
+          @include mobile {
             width: 100%;
-            height: 340px;
+            font-size: 16px;
+          }
         }
-    }
-    .book-shelf-image{
+      }
+
+      .mentor-image {
+        width: 20px;
+        height: 20px;
+      }
+
+      .book-shelf-image {
         width: 263px;
         height: 394px;
         margin-top: 43px;
         margin-left: 117px;
 
-        @include mobile{  
-            margin-left: 75px;          
-            width: 200px;
-            height: 290px;
-            margin-top: 26;
+        @include mobile {
+          margin-left: 75px;
+          width: 200px;
+          height: 290px;
+          margin-top: 26;
         }
+      }
     }
-   
-   }
   }
-  .recommended-body{
+  .recommended-body {
     max-width: 1128px;
     display: block;
     margin: auto;
@@ -202,29 +149,26 @@
     @include mobile {
       padding: 0px 12px 0px 12px;
     }
-    .review-comments{
-        margin-top: 110px;
-        @include mobile{
-            margin-top: 20px;
-        }
-        .recommendation{
-            font-family: 'Poppins', sans-serif;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 36px;
-            line-height: 54px;
-            color: #1E2432;
-        }
-        .card-list{
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .review-card{
-            margin-right: 60px;
-            margin-left: 30px;
-            margin-top: 20px;
-        }
+    .review-comments {
+      @include mobile {
+        margin-top: 20px;
+      }
+      .recommendation {
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 54px;
+        color: #1e2432;
+      }
+      .card-list {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .review-card {
+        margin-right: 60px;
+        margin-top: 20px;
+      }
     }
   }
-
 }
